[package]
name = "diskmap"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/blkgoose/disk-map-rs"
description = """
disk based HashMap-like for shared concurrent memory usage
"""
keywords = ["hashmap", "concurrent"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
advisory-lock = "0.3.0"
serde_cbor = "0.11.1"
